--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "liri-node-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Description",
   "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
